[tool.poetry]
name = "tess-ephem"
version = "0.4.0"
description = "Where are Solar System objects located in TESS FFI data?"
license = "MIT"
authors = ["Geert Barentsen <hello@geert.io>",
           "Christina Hedges",
           "Jessie Dotson"]
readme = "README.rst"
homepage = "https://github.com/SSDataLab/tess-ephem"
repository = "https://github.com/SSDataLab/tess-ephem"
keywords = ["NASA, TESS, Astronomy"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.9.0"
astroquery = "0.4.6"
numpy = "^1.23.0"
pandas = "^1.4.4"
astropy = "^5.2.0"
tess-locator = "^0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
jupyterlab = "^2.2.9"
line-profiler = "^3.1.0"
mypy = "^0.790"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.1.0"
isort = "^5.6.4"
matplotlib = "^3.3.3"
#tess-locator = {path = "../tess-locator", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
