[tool.poetry]
name = "tess-ephem"
version = "0.6.1"
description = "Where are Solar System objects located in TESS FFI data?"
license = "MIT"
authors = ["Geert Barentsen <hello@geert.io>",
           "Christina Hedges",
           "Jorge Martinez-Palomera",
           "Jessie Dotson",
           "Amy Tuson"]
readme = "README.rst"
homepage = "https://github.com/SSDataLab/tess-ephem"
repository = "https://github.com/SSDataLab/tess-ephem"
keywords = ["NASA, TESS, Astronomy"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.9.0"
astroquery = "^0.4.9"
numpy = "^1.23.0"
pandas = "^2.0"
astropy = "^5.2.0"
tesswcs = "^1.6.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^6.1.2"
jupyterlab = "^2.2.9"
matplotlib = "^3.3.3"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
